--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 spring:
+  profiles:
+      include: oauth
+  session:
+    store-type: jdbc
+
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
 
     properties:
       hibernate:
