--- a/src/main/resources/application-real.yml
+++ b/src/main/resources/application-real.yml
@@ -4,6 +4,6 @@ spring:
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+        dialect: org.hibernate.dialect.MariaDBDialect
   session:
     store-type: jdbc
