--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,20 @@
 spring:
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/test
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
   jpa:
     hibernate:
       ddl-auto: create
     properties:
       hibernate:
-        # show_sql: true
+#        show_sql: true
         format_sql: true
-        default_batch_fetch_size: 100
+#        default_batch_fetch_size: 100
 
-    open-in-view: true
+#    open-in-view: true
 
 logging.level:
   org.hibernate.SQL: debug
